--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -6,10 +6,7 @@
   "webDir": "www",
   "plugins": {
     "SplashScreen": {
-      "launchShowDuration": 20000,
-      "launchAutoHide": false,
-      "splashImmersive": false,
-      "splashFullScreen": false
+      "launchShowDuration": 0
     }
   },
   "cordova": {}
